--- a/PhotoAlbum/PhotoAlbum/Sources/Albums/Cell/AlbumsTableViewCell.xib
+++ b/PhotoAlbum/PhotoAlbum/Sources/Albums/Cell/AlbumsTableViewCell.xib
@@ -17,7 +17,7 @@
                 <rect key="frame" x="0.0" y="0.0" width="375" height="85"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="zmu-bQ-BL0">
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="zmu-bQ-BL0">
                         <rect key="frame" x="10" y="7" width="70" height="70"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="70" id="Nzb-zP-Nhq"/>
