fix : 사진 비율 깨지지않고 나오게 수정

--- a/PhotoAlbum/PhotoAlbum/Sources/PhotoList/Cell/PhotoListCollectionViewCell.xib
+++ b/PhotoAlbum/PhotoAlbum/Sources/PhotoList/Cell/PhotoListCollectionViewCell.xib
@@ -17,7 +17,7 @@
                 <rect key="frame" x="0.0" y="0.0" width="102" height="104"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="uGz-WJ-pz4">
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="uGz-WJ-pz4">
                         <rect key="frame" x="0.0" y="0.0" width="102" height="104"/>
                     </imageView>
                 </subviews>
